# freerdp-sys

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  vendored.yml
cmake/: CMakeLists.txt
scripts/: regenerate-bindings.sh
src/: bindings.rs  lib.rs  wrapper.h
tests/: e2e.rs
